Fix class name collisions and warnings